--- a/ais-exp.ipynb
+++ b/ais-exp.ipynb
@@ -142,6 +142,7 @@
     "\n",
     "df_ais['etaParsed'] = df_ais.apply(lambda row: adjust_year(row['etaParsed'], row['time']), axis = 1)\n",
     "df_ais[df_ais['later']  == False].head() #It's fixed\n",
+    "yess\n",
     "\"\"\"\n",
     "\n"
    ]
