Add planning files

--- a/ais-exp.ipynb
+++ b/ais-exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>cog</th>\n",
+       "      <th>sog</th>\n",
+       "      <th>rot</th>\n",
+       "      <th>heading</th>\n",
+       "      <th>navstat</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1522065</td>\n",
+       "      <td>1.522065e+06</td>\n",
+       "      <td>1.522065e+06</td>\n",
+       "      <td>1.522065e+06</td>\n",
+       "      <td>1.522065e+06</td>\n",
+       "      <td>1.522065e+06</td>\n",
+       "      <td>1.522065e+06</td>\n",
+       "      <td>1.522065e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2024-03-06 03:20:23.657231360</td>\n",
+       "      <td>1.782494e+02</td>\n",
+       "      <td>6.331703e+00</td>\n",
+       "      <td>5.054561e-01</td>\n",
+       "      <td>1.762737e+02</td>\n",
+       "      <td>2.092604e+00</td>\n",
+       "      <td>3.658497e+01</td>\n",
+       "      <td>1.153646e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2024-01-01 00:00:25</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-1.270000e+02</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-4.753287e+01</td>\n",
+       "      <td>-1.675409e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2024-02-03 02:59:19</td>\n",
+       "      <td>7.820000e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>7.500000e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>3.451683e+01</td>\n",
+       "      <td>-5.212810e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2024-03-07 12:34:57</td>\n",
+       "      <td>1.838000e+02</td>\n",
+       "      <td>5.000000e-01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.800000e+02</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>4.223370e+01</td>\n",
+       "      <td>4.234350e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2024-04-07 07:37:36</td>\n",
+       "      <td>2.690000e+02</td>\n",
+       "      <td>1.410000e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>2.650000e+02</td>\n",
+       "      <td>5.000000e+00</td>\n",
+       "      <td>5.135197e+01</td>\n",
+       "      <td>1.883715e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2024-05-07 23:59:08</td>\n",
+       "      <td>3.600000e+02</td>\n",
+       "      <td>1.023000e+02</td>\n",
+       "      <td>1.280000e+02</td>\n",
+       "      <td>5.110000e+02</td>\n",
+       "      <td>1.500000e+01</td>\n",
+       "      <td>7.055720e+01</td>\n",
+       "      <td>1.788054e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.076785e+02</td>\n",
+       "      <td>7.539364e+00</td>\n",
+       "      <td>1.760916e+01</td>\n",
+       "      <td>1.070860e+02</td>\n",
+       "      <td>2.411965e+00</td>\n",
+       "      <td>2.290488e+01</td>\n",
+       "      <td>6.871572e+01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                time           cog           sog  \\\n",
+       "count                        1522065  1.522065e+06  1.522065e+06   \n",
+       "mean   2024-03-06 03:20:23.657231360  1.782494e+02  6.331703e+00   \n",
+       "min              2024-01-01 00:00:25  0.000000e+00  0.000000e+00   \n",
+       "25%              2024-02-03 02:59:19  7.820000e+01  0.000000e+00   \n",
+       "50%              2024-03-07 12:34:57  1.838000e+02  5.000000e-01   \n",
+       "75%              2024-04-07 07:37:36  2.690000e+02  1.410000e+01   \n",
+       "max              2024-05-07 23:59:08  3.600000e+02  1.023000e+02   \n",
+       "std                              NaN  1.076785e+02  7.539364e+00   \n",
+       "\n",
+       "                rot       heading       navstat      latitude     longitude  \n",
+       "count  1.522065e+06  1.522065e+06  1.522065e+06  1.522065e+06  1.522065e+06  \n",
+       "mean   5.054561e-01  1.762737e+02  2.092604e+00  3.658497e+01  1.153646e+01  \n",
+       "min   -1.270000e+02  0.000000e+00  0.000000e+00 -4.753287e+01 -1.675409e+02  \n",
+       "25%    0.000000e+00  7.500000e+01  0.000000e+00  3.451683e+01 -5.212810e+00  \n",
+       "50%    0.000000e+00  1.800000e+02  0.000000e+00  4.223370e+01  4.234350e+00  \n",
+       "75%    0.000000e+00  2.650000e+02  5.000000e+00  5.135197e+01  1.883715e+01  \n",
+       "max    1.280000e+02  5.110000e+02  1.500000e+01  7.055720e+01  1.788054e+02  \n",
+       "std    1.760916e+01  1.070860e+02  2.411965e+00  2.290488e+01  6.871572e+01  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_ais = pd.read_csv('ais_train.csv', sep='|')\n",
+    "df_ais = pd.read_csv('../resources/ais_train.csv', sep='|')\n",
     "df_ais.head()\n",
     "df_ais['time'] = pd.to_datetime(df_ais['time'])\n",
     "\n",
@@ -156,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
