--- a/src/LSTM.ipynb
+++ b/src/LSTM.ipynb
@@ -9,15 +9,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-07 17:55:21.375539: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-10-07 17:55:21.383885: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-10-07 17:55:21.448938: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-10-07 17:55:21.507027: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-10-07 17:55:21.560621: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-10-07 17:55:21.576664: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-10-07 17:55:21.665226: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-10-08 16:16:26.430318: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-10-08 16:16:26.431085: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-10-08 16:16:26.435011: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-10-08 16:16:26.445371: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-10-08 16:16:26.462868: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-10-08 16:16:26.468030: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-10-08 16:16:26.480567: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-10-07 17:55:22.747742: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-10-08 16:16:27.308935: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -234,45 +234,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[Timestamp('2024-01-01 00:00:25') 284.0 0.7 0 88 0 -34.7437 -57.8513\n",
-      "  '61e9f3a8b937134a3c4bfdf7' '61d371c43aeaecc07011a37f'\n",
-      "  Timestamp('2024-01-09 23:00:00')]\n",
-      " [Timestamp('2024-01-01 06:09:08') 92.8 14.2 0 90 0 -35.16787 -56.7721\n",
-      "  '61e9f3a8b937134a3c4bfdf7' '61d371c43aeaecc07011a37f'\n",
-      "  Timestamp('2024-01-09 23:00:00')]\n",
-      " [Timestamp('2024-01-01 06:38:19') 90.5 14.3 0 88 0 -35.16863 -56.63185\n",
-      "  '61e9f3a8b937134a3c4bfdf7' '61d371c43aeaecc07011a37f'\n",
-      "  Timestamp('2024-01-09 23:00:00')]\n",
-      " [Timestamp('2024-01-01 06:58:55') 88.2 14.3 0 86 0 -35.16805 -56.5319\n",
-      "  '61e9f3a8b937134a3c4bfdf7' '61d371c43aeaecc07011a37f'\n",
-      "  Timestamp('2024-01-09 23:00:00')]\n",
-      " [Timestamp('2024-01-01 07:15:56') 88.3 12.3 0 86 0 -35.16715 -56.45306\n",
-      "  '61e9f3a8b937134a3c4bfdf7' '61d371c43aeaecc07011a37f'\n",
-      "  Timestamp('2024-01-09 23:00:00')]\n",
-      " [Timestamp('2024-01-01 07:28:15') 86.8 11.7 0 85 0 -35.16646 -56.40306\n",
-      "  '61e9f3a8b937134a3c4bfdf7' '61d371c43aeaecc07011a37f'\n",
-      "  Timestamp('2024-01-09 23:00:00')]\n",
-      " [Timestamp('2024-01-01 08:03:35') 70.4 15.2 0 67 0 -35.16544 -56.23866\n",
-      "  '61e9f3a8b937134a3c4bfdf7' '61d371c43aeaecc07011a37f'\n",
-      "  Timestamp('2024-01-09 23:00:00')]]\n"
+      "[[-35.08926 -55.50466]\n",
+      " [-35.09485 -55.35699]\n",
+      " [-35.10507 -55.25475]\n",
+      " ...\n",
+      " [37.15745 144.85164]\n",
+      " [37.20409 144.94732]\n",
+      " [37.22231 144.98452]]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "float() argument must be a string or a real number, not 'NaTType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 21\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mfloat\u001b[39m(timestamp)\n\u001b[1;32m     19\u001b[0m Xs[:, :, \u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([np\u001b[38;5;241m.\u001b[39marray([convert_timestamp_to_seconds(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m column]) \u001b[38;5;28;01mfor\u001b[39;00m column \u001b[38;5;129;01min\u001b[39;00m Xs[:, :, \u001b[38;5;241m0\u001b[39m]])\n\u001b[0;32m---> 21\u001b[0m Xs[:, :, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([np\u001b[38;5;241m.\u001b[39marray([convert_timestamp_to_seconds(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m column]) \u001b[38;5;28;01mfor\u001b[39;00m column \u001b[38;5;129;01min\u001b[39;00m Xs[:, :, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]])\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(Xs[:, :, \u001b[38;5;241m0\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[11], line 13\u001b[0m, in \u001b[0;36mconvert_timestamp_to_seconds\u001b[0;34m(timestamp)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(timestamp)\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNaTType\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(timestamp)\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mfloat\u001b[39m(timestamp)\n",
+      "\u001b[0;31mTypeError\u001b[0m: float() argument must be a string or a real number, not 'NaTType'"
      ]
     }
    ],
    "source": [
-    "print(Xs[0,:,:])\n",
+    "def convert_timestamp_to_seconds(timestamp):\n",
+    "    \"\"\"\n",
+    "    Input:\n",
+    "    timestamp: A pandas Timestamp object\n",
+    "    \n",
+    "    Output:\n",
+    "    seconds: The number of seconds since the (January 1, 2023)\n",
+    "    \"\"\"\n",
+    "    if isinstance(timestamp, pd.Timestamp):\n",
+    "        return float((timestamp - pd.Timestamp('2023-01-01')).total_seconds()) \n",
+    "    elif type(timestamp)=='NaTType':\n",
+    "        print(timestamp)\n",
+    "    return float(timestamp)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Xs[:, :, 0] = np.array([np.array([convert_timestamp_to_seconds(x) for x in column]) for column in Xs[:, :, 0]])\n",
+    "\n",
+    "Xs[:, :, -1] = np.array([np.array([convert_timestamp_to_seconds(x) for x in column]) for column in Xs[:, :, -1]])\n",
+    "print(Xs[:, :, 0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_X = Xs[:int(np.round(Xs.shape[0]*0.7))]\n",
     "train_Y = ys[:int(np.round(Xs.shape[0]*0.7))]\n",
     "val_X = Xs[int(np.round(Xs.shape[0]*0.7)):int(np.round(Xs.shape[0]*0.85))]\n",
     "val_Y = ys[int(np.round(Xs.shape[0]*0.7)):int(np.round(Xs.shape[0]*0.85))]\n",
     "test_X = Xs[int(np.round(Xs.shape[0]*0.85)):]\n",
-    "test_Y = ys[int(np.round(Xs.shape[0]*0.85)):]\n"
+    "test_Y = ys[int(np.round(Xs.shape[0]*0.85)):]"
    ]
   },
   {
@@ -377,7 +412,18 @@
     }
    ],
    "source": [
-    "print(train_X[0, :, :])"
+    "def convert_timestamp_to_seconds(timestamp):\n",
+    "    \"\"\"\n",
+    "    Input:\n",
+    "    timestamp: A pandas Timestamp object\n",
+    "    \n",
+    "    Output:\n",
+    "    seconds: The number of seconds since the (January 1, 2023)\n",
+    "    \"\"\"\n",
+    "    if isinstance(timestamp, pd.Timestamp):\n",
+    "        return float((timestamp - pd.Timestamp('2023-01-01')).total_seconds())\n",
+    "    return float(timestamp)\n",
+    "\n"
    ]
   },
   {
