Add column sorter

--- a/src/fucking_around.ipynb
+++ b/src/fucking_around.ipynb
@@ -2,15 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import tensorflow as tf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import re\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
@@ -25,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -286,21 +296,20 @@
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 42\u001b[0m\n\u001b[0;32m     38\u001b[0m     df_supervised\u001b[38;5;241m.\u001b[39mdropna(inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     40\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df_supervised\n\u001b[1;32m---> 42\u001b[0m supervised_h \u001b[38;5;241m=\u001b[39m \u001b[43mmake_supervised\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpretty_h\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlatitude\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlongitude\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mvesselId\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     44\u001b[0m supervised_h\u001b[38;5;241m.\u001b[39mcolumns\n",
-      "Cell \u001b[1;32mIn[11], line 23\u001b[0m, in \u001b[0;36mmake_supervised\u001b[1;34m(df, forecast_columns, sorting_column, input_window, output_window)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m#Iterate through all IDs\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sorts \u001b[38;5;129;01min\u001b[39;00m unique_sorts:\n\u001b[1;32m---> 23\u001b[0m     sort_df \u001b[38;5;241m=\u001b[39m df[\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43msorting_column\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[43msorts\u001b[49m]\n\u001b[0;32m     25\u001b[0m     \u001b[38;5;66;03m#Iterate through all columns for input features\u001b[39;00m\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m sort_df\u001b[38;5;241m.\u001b[39mcolumns: \n",
-      "File \u001b[1;32mc:\\Users\\Bruker\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\ops\\common.py:76\u001b[0m, in \u001b[0;36m_unpack_zerodim_and_defer.<locals>.new_method\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     72\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mNotImplemented\u001b[39m\n\u001b[0;32m     74\u001b[0m other \u001b[38;5;241m=\u001b[39m item_from_zerodim(other)\n\u001b[1;32m---> 76\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmethod\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mother\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Bruker\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\arraylike.py:40\u001b[0m, in \u001b[0;36mOpsMixin.__eq__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;129m@unpack_zerodim_and_defer\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__eq__\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__eq__\u001b[39m(\u001b[38;5;28mself\u001b[39m, other):\n\u001b[1;32m---> 40\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_cmp_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mother\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moperator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meq\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Bruker\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\series.py:6119\u001b[0m, in \u001b[0;36mSeries._cmp_method\u001b[1;34m(self, other, op)\u001b[0m\n\u001b[0;32m   6116\u001b[0m lvalues \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values\n\u001b[0;32m   6117\u001b[0m rvalues \u001b[38;5;241m=\u001b[39m extract_array(other, extract_numpy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, extract_range\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m-> 6119\u001b[0m res_values \u001b[38;5;241m=\u001b[39m \u001b[43mops\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcomparison_op\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mop\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   6121\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_construct_result(res_values, name\u001b[38;5;241m=\u001b[39mres_name)\n",
-      "File \u001b[1;32mc:\\Users\\Bruker\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\ops\\array_ops.py:344\u001b[0m, in \u001b[0;36mcomparison_op\u001b[1;34m(left, right, op)\u001b[0m\n\u001b[0;32m    341\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m invalid_comparison(lvalues, rvalues, op)\n\u001b[0;32m    343\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m lvalues\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mobject\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(rvalues, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m--> 344\u001b[0m     res_values \u001b[38;5;241m=\u001b[39m \u001b[43mcomp_method_OBJECT_ARRAY\u001b[49m\u001b[43m(\u001b[49m\u001b[43mop\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrvalues\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    346\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    347\u001b[0m     res_values \u001b[38;5;241m=\u001b[39m _na_arithmetic_op(lvalues, rvalues, op, is_cmp\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\Bruker\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\ops\\array_ops.py:130\u001b[0m, in \u001b[0;36mcomp_method_OBJECT_ARRAY\u001b[1;34m(op, x, y)\u001b[0m\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    129\u001b[0m     result \u001b[38;5;241m=\u001b[39m libops\u001b[38;5;241m.\u001b[39mscalar_compare(x\u001b[38;5;241m.\u001b[39mravel(), y, op)\n\u001b[1;32m--> 130\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mresult\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['cog_t-3', 'cog_t-2', 'cog_t-1', 'cog_t', 'sog_t-3', 'sog_t-2',\n",
+       "       'sog_t-1', 'sog_t', 'rot_t-3', 'rot_t-2',\n",
+       "       ...\n",
+       "       'navstat_13.0_t-1', 'navstat_13.0_t', 'navstat_9.0_t-3',\n",
+       "       'navstat_9.0_t-2', 'navstat_9.0_t-1', 'navstat_9.0_t', 'latitude_t+2',\n",
+       "       'latitude_t+1', 'longitude_t+2', 'longitude_t+1'],\n",
+       "      dtype='object', length=112)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -354,21 +363,154 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sort_columns(df):\n",
+    "    \n",
+    "    # Extract suffixes and assign _t as _t0\n",
+    "    columns_with_suffix = []\n",
+    "    for col in df.columns:\n",
+    "        match = re.search(r\"_t([+-]?\\d*)$\", col)\n",
+    "        # If there's no number after _t, treat it as _t0\n",
+    "        suffix = int(match.group(1)) if match.group(1) else 0\n",
+    "        columns_with_suffix.append((col, suffix))\n",
+    "    \n",
+    "    # Sort by suffix value (ascending)\n",
+    "    sorted_t_columns = [col for col, _ in sorted(columns_with_suffix, key=lambda x: x[1])]\n",
+    "    \n",
+    "    # Reorder dataframe columns\n",
+    "    return df[sorted_t_columns]\n",
+    "\n",
+    "supervised_t=sort_columns(supervised_h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'supervised_h' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m([col \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m \u001b[43msupervised_h\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'supervised_h' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "latitude_t+2\n",
+      "longitude_t+2\n",
+      "latitude_t+1\n",
+      "longitude_t+1\n",
+      "cog_t\n",
+      "sog_t\n",
+      "rot_t\n",
+      "heading_t\n",
+      "latitude_t\n",
+      "longitude_t\n",
+      "vesselId_t\n",
+      "portId_t\n",
+      "etaParsed_t\n",
+      "UN_LOCODE_t\n",
+      "ISO_t\n",
+      "portLongitude_t\n",
+      "portLatitude_t\n",
+      "navstat_5.0_t\n",
+      "navstat_1.0_t\n",
+      "navstat_8.0_t\n",
+      "navstat_2.0_t\n",
+      "navstat_3.0_t\n",
+      "navstat_15.0_t\n",
+      "navstat_4.0_t\n",
+      "navstat_14.0_t\n",
+      "navstat_11.0_t\n",
+      "navstat_12.0_t\n",
+      "navstat_6.0_t\n",
+      "navstat_7.0_t\n",
+      "navstat_13.0_t\n",
+      "navstat_9.0_t\n",
+      "cog_t-1\n",
+      "sog_t-1\n",
+      "rot_t-1\n",
+      "heading_t-1\n",
+      "latitude_t-1\n",
+      "longitude_t-1\n",
+      "vesselId_t-1\n",
+      "portId_t-1\n",
+      "etaParsed_t-1\n",
+      "UN_LOCODE_t-1\n",
+      "ISO_t-1\n",
+      "portLongitude_t-1\n",
+      "portLatitude_t-1\n",
+      "navstat_5.0_t-1\n",
+      "navstat_1.0_t-1\n",
+      "navstat_8.0_t-1\n",
+      "navstat_2.0_t-1\n",
+      "navstat_3.0_t-1\n",
+      "navstat_15.0_t-1\n",
+      "navstat_4.0_t-1\n",
+      "navstat_14.0_t-1\n",
+      "navstat_11.0_t-1\n",
+      "navstat_12.0_t-1\n",
+      "navstat_6.0_t-1\n",
+      "navstat_7.0_t-1\n",
+      "navstat_13.0_t-1\n",
+      "navstat_9.0_t-1\n",
+      "cog_t-2\n",
+      "sog_t-2\n",
+      "rot_t-2\n",
+      "heading_t-2\n",
+      "latitude_t-2\n",
+      "longitude_t-2\n",
+      "vesselId_t-2\n",
+      "portId_t-2\n",
+      "etaParsed_t-2\n",
+      "UN_LOCODE_t-2\n",
+      "ISO_t-2\n",
+      "portLongitude_t-2\n",
+      "portLatitude_t-2\n",
+      "navstat_5.0_t-2\n",
+      "navstat_1.0_t-2\n",
+      "navstat_8.0_t-2\n",
+      "navstat_2.0_t-2\n",
+      "navstat_3.0_t-2\n",
+      "navstat_15.0_t-2\n",
+      "navstat_4.0_t-2\n",
+      "navstat_14.0_t-2\n",
+      "navstat_11.0_t-2\n",
+      "navstat_12.0_t-2\n",
+      "navstat_6.0_t-2\n",
+      "navstat_7.0_t-2\n",
+      "navstat_13.0_t-2\n",
+      "navstat_9.0_t-2\n",
+      "cog_t-3\n",
+      "sog_t-3\n",
+      "rot_t-3\n",
+      "heading_t-3\n",
+      "latitude_t-3\n",
+      "longitude_t-3\n",
+      "vesselId_t-3\n",
+      "portId_t-3\n",
+      "etaParsed_t-3\n",
+      "UN_LOCODE_t-3\n",
+      "ISO_t-3\n",
+      "portLongitude_t-3\n",
+      "portLatitude_t-3\n",
+      "navstat_5.0_t-3\n",
+      "navstat_1.0_t-3\n",
+      "navstat_8.0_t-3\n",
+      "navstat_2.0_t-3\n",
+      "navstat_3.0_t-3\n",
+      "navstat_15.0_t-3\n",
+      "navstat_4.0_t-3\n",
+      "navstat_14.0_t-3\n",
+      "navstat_11.0_t-3\n",
+      "navstat_12.0_t-3\n",
+      "navstat_6.0_t-3\n",
+      "navstat_7.0_t-3\n",
+      "navstat_13.0_t-3\n",
+      "navstat_9.0_t-3\n"
      ]
     }
    ],
    "source": [
-    "print([col for col in supervised_h.columns])"
+    "for col in supervised_t.columns:\n",
+    "    print(col)"
    ]
   }
  ],
