--- a/src/fucking_around.ipynb
+++ b/src/fucking_around.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,71 +386,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latitude_t+2\n",
-      "longitude_t+2\n",
-      "latitude_t+1\n",
-      "longitude_t+1\n",
-      "cog_t\n",
-      "sog_t\n",
-      "rot_t\n",
-      "heading_t\n",
-      "latitude_t\n",
-      "longitude_t\n",
-      "vesselId_t\n",
-      "portId_t\n",
-      "etaParsed_t\n",
-      "UN_LOCODE_t\n",
-      "ISO_t\n",
-      "portLongitude_t\n",
-      "portLatitude_t\n",
-      "navstat_5.0_t\n",
-      "navstat_1.0_t\n",
-      "navstat_8.0_t\n",
-      "navstat_2.0_t\n",
-      "navstat_3.0_t\n",
-      "navstat_15.0_t\n",
-      "navstat_4.0_t\n",
-      "navstat_14.0_t\n",
-      "navstat_11.0_t\n",
-      "navstat_12.0_t\n",
-      "navstat_6.0_t\n",
-      "navstat_7.0_t\n",
-      "navstat_13.0_t\n",
-      "navstat_9.0_t\n",
-      "cog_t-1\n",
-      "sog_t-1\n",
-      "rot_t-1\n",
-      "heading_t-1\n",
-      "latitude_t-1\n",
-      "longitude_t-1\n",
-      "vesselId_t-1\n",
-      "portId_t-1\n",
-      "etaParsed_t-1\n",
-      "UN_LOCODE_t-1\n",
-      "ISO_t-1\n",
-      "portLongitude_t-1\n",
-      "portLatitude_t-1\n",
-      "navstat_5.0_t-1\n",
-      "navstat_1.0_t-1\n",
-      "navstat_8.0_t-1\n",
-      "navstat_2.0_t-1\n",
-      "navstat_3.0_t-1\n",
-      "navstat_15.0_t-1\n",
-      "navstat_4.0_t-1\n",
-      "navstat_14.0_t-1\n",
-      "navstat_11.0_t-1\n",
-      "navstat_12.0_t-1\n",
-      "navstat_6.0_t-1\n",
-      "navstat_7.0_t-1\n",
-      "navstat_13.0_t-1\n",
-      "navstat_9.0_t-1\n",
+      "cog_t-3\n",
+      "sog_t-3\n",
+      "rot_t-3\n",
+      "heading_t-3\n",
+      "latitude_t-3\n",
+      "longitude_t-3\n",
+      "vesselId_t-3\n",
+      "portId_t-3\n",
+      "etaParsed_t-3\n",
+      "UN_LOCODE_t-3\n",
+      "ISO_t-3\n",
+      "portLongitude_t-3\n",
+      "portLatitude_t-3\n",
+      "navstat_5.0_t-3\n",
+      "navstat_1.0_t-3\n",
+      "navstat_8.0_t-3\n",
+      "navstat_2.0_t-3\n",
+      "navstat_3.0_t-3\n",
+      "navstat_15.0_t-3\n",
+      "navstat_4.0_t-3\n",
+      "navstat_14.0_t-3\n",
+      "navstat_11.0_t-3\n",
+      "navstat_12.0_t-3\n",
+      "navstat_6.0_t-3\n",
+      "navstat_7.0_t-3\n",
+      "navstat_13.0_t-3\n",
+      "navstat_9.0_t-3\n",
       "cog_t-2\n",
       "sog_t-2\n",
       "rot_t-2\n",
@@ -478,33 +447,64 @@
       "navstat_7.0_t-2\n",
       "navstat_13.0_t-2\n",
       "navstat_9.0_t-2\n",
-      "cog_t-3\n",
-      "sog_t-3\n",
-      "rot_t-3\n",
-      "heading_t-3\n",
-      "latitude_t-3\n",
-      "longitude_t-3\n",
-      "vesselId_t-3\n",
-      "portId_t-3\n",
-      "etaParsed_t-3\n",
-      "UN_LOCODE_t-3\n",
-      "ISO_t-3\n",
-      "portLongitude_t-3\n",
-      "portLatitude_t-3\n",
-      "navstat_5.0_t-3\n",
-      "navstat_1.0_t-3\n",
-      "navstat_8.0_t-3\n",
-      "navstat_2.0_t-3\n",
-      "navstat_3.0_t-3\n",
-      "navstat_15.0_t-3\n",
-      "navstat_4.0_t-3\n",
-      "navstat_14.0_t-3\n",
-      "navstat_11.0_t-3\n",
-      "navstat_12.0_t-3\n",
-      "navstat_6.0_t-3\n",
-      "navstat_7.0_t-3\n",
-      "navstat_13.0_t-3\n",
-      "navstat_9.0_t-3\n"
+      "cog_t-1\n",
+      "sog_t-1\n",
+      "rot_t-1\n",
+      "heading_t-1\n",
+      "latitude_t-1\n",
+      "longitude_t-1\n",
+      "vesselId_t-1\n",
+      "portId_t-1\n",
+      "etaParsed_t-1\n",
+      "UN_LOCODE_t-1\n",
+      "ISO_t-1\n",
+      "portLongitude_t-1\n",
+      "portLatitude_t-1\n",
+      "navstat_5.0_t-1\n",
+      "navstat_1.0_t-1\n",
+      "navstat_8.0_t-1\n",
+      "navstat_2.0_t-1\n",
+      "navstat_3.0_t-1\n",
+      "navstat_15.0_t-1\n",
+      "navstat_4.0_t-1\n",
+      "navstat_14.0_t-1\n",
+      "navstat_11.0_t-1\n",
+      "navstat_12.0_t-1\n",
+      "navstat_6.0_t-1\n",
+      "navstat_7.0_t-1\n",
+      "navstat_13.0_t-1\n",
+      "navstat_9.0_t-1\n",
+      "cog_t\n",
+      "sog_t\n",
+      "rot_t\n",
+      "heading_t\n",
+      "latitude_t\n",
+      "longitude_t\n",
+      "vesselId_t\n",
+      "portId_t\n",
+      "etaParsed_t\n",
+      "UN_LOCODE_t\n",
+      "ISO_t\n",
+      "portLongitude_t\n",
+      "portLatitude_t\n",
+      "navstat_5.0_t\n",
+      "navstat_1.0_t\n",
+      "navstat_8.0_t\n",
+      "navstat_2.0_t\n",
+      "navstat_3.0_t\n",
+      "navstat_15.0_t\n",
+      "navstat_4.0_t\n",
+      "navstat_14.0_t\n",
+      "navstat_11.0_t\n",
+      "navstat_12.0_t\n",
+      "navstat_6.0_t\n",
+      "navstat_7.0_t\n",
+      "navstat_13.0_t\n",
+      "navstat_9.0_t\n",
+      "latitude_t+1\n",
+      "longitude_t+1\n",
+      "latitude_t+2\n",
+      "longitude_t+2\n"
      ]
     }
    ],
