add mutipe stepsizes

--- a/src/xgboost_rf.ipynb
+++ b/src/xgboost_rf.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,17 +145,19 @@
     "\n",
     "    return df_new\n",
     "\n",
-    "supervised_df = make_supervised(total_df, OUTPUT_FORECAST,\"vesselId\" , INPUT_WINDOW, OUTPUT_WINDOW)\n"
+    "superviseddfs = []\n",
+    "for stepsize in STEPSIZES:\n",
+    "    superviseddfs.append(make_supervised(total_df, OUTPUT_FORECAST,\"vesselId\", INPUT_WINDOW, OUTPUT_WINDOW, size=stepsize))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Sorting by time\n",
-    "supervised_df = supervised_df.sort_index(ascending = True)\n",
+    "\n",
     "\n",
     "#Sorting columns\n",
     "def sort_columns(df):\n",
@@ -174,7 +176,9 @@
     "    # Reorder dataframe columns\n",
     "    return df[sorted_t_columns]\n",
     "\n",
-    "supervised_df=sort_columns(supervised_df)\n"
+    "for supervised_df in superviseddfs:\n",
+    "    supervised_df = supervised_df.sort_index(ascending = True)\n",
+    "    supervised_df=sort_columns(supervised_df)\n"
    ]
   },
   {
